# systat

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  systat.js
c/: CMakeCache.txt  CMakeLists.txt  Console.cpp  Console.h  Makefile  Network.h  Platform.cpp  Platform.h  Processor.cpp  cpu.cpp  iostat.cpp  main.cpp  network.cpp  systat.h
c/common/: Console.cpp  Console.h  Log.cpp  Log.h  Makefile  Parser.cpp  Parser.h  header.txt
c/linux/: Disk.cpp  Disk.h  Makefile  Memory.cpp  Memory.h  Network.cpp  Network.h  Parser.cpp  Parser.h  Platform.cpp  Platform.h  Processor.cpp  Processor.h  VirtualMemory.cpp  VirtualMemory.h  header.txt  main.cpp  systat.h
c/mac/: CMakeCache.txt  Disk.cpp  Disk.h  Makefile  Makefile.mac  Memory.cpp  Memory.h  Network.cpp  Network.h  Platform.cpp  Platform.h  Processor.cpp  Processor.h  VirtualMemory.cpp  VirtualMemory.h  header.txt  main.cpp  network.cpp  systat.h
c/old/: Console.h
js/: systat.js
license/: iostats.txt
perl/: systat.pl
